# Machine-Learning-Project

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  proposal_next_steps.md  pyproject.toml  results_summary.md
artifacts/: README.md
artifacts/metrics/: best_models.csv  dataset_summary.json  model_manifest.json  motion_effect_overall.csv  motion_effect_subgroups.csv  motion_lift_overall.csv  motion_lift_subgroups.csv  overall_metrics.csv  proposal_summary.md  season_summary.csv  selected_models.csv  subgroup_metrics.csv  tracking_response_lift_overall.csv  tracking_response_lift_subgroups.csv  validation_metrics.csv
artifacts/models/: classification_completion_full_gradient_boosting.pkl  classification_completion_full_logistic_regression.pkl  classification_success_full_logistic_regression.pkl  (+2 more)
configs/: default.yaml  motion_value_v2.yaml  motion_value_v2_academic.yaml  motion_value_v2_final.yaml  motion_value_v2_inference.yaml  motion_value_v2_no_calibration.yaml  motion_value_v2_offense_only.yaml  motion_value_v2_pilot.yaml  motion_value_v2_pilot_inference.yaml  motion_value_v2_pilot_no_calibration.yaml  motion_value_v2_pilot_offense_only.yaml  quickstart.yaml  tracking_experiment.yaml
docs/: academic_experiment_handoff.md  collaboration_plan.md  final_experiment_handoff.md  graph_guide.md  presentation_outline.md  presentation_outline_8_slides.md  proposal_next_steps.md
scripts/: generate_report_graphs.py  run_experiment.py
tests/: test_config.py  test_experiment_runner.py  test_reporting.py  test_splits.py  test_tracking.py  test_train.py
(+56 files in other folders)
