[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-snap-motion-value"
version = "0.1.0"
description = "Machine learning framework for studying pre-snap motion value on NFL passing plays."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8.0",
  "nflreadpy>=0.1.5",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "polars>=1.30.0",
  "pyarrow>=18.0.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pre-snap-motion = "pre_snap_motion.cli:main"
pre-snap-motion-experiment = "pre_snap_motion.experiment_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
